--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             /> -->
         </section>
 
-        <section class="py-10 lg:py-20">
+        <section class="pt-12 lg:pt-20 pb-10 lg:pb-20">
             <div class="container flex flex-wrap items-center">
                 <div class="w-full lg:w-1/4">
                     <span
@@ -217,8 +217,10 @@
         <section class="pt-5 lg:pt-0 relative">
             <div class="container">
                 <div class="w-full lg:w-10/12">
-                    <h2 class="text-[40px] text-white">Strategic Planning</h2>
-                    <p class="text-white text-2xl pt-5">
+                    <h2 class="text-3xl lg:text-[40px] text-white">
+                        Strategic Planning
+                    </h2>
+                    <p class="text-white text-lg lg:text-2xl pt-5">
                         The principal goal of a maintenance organisation is
                         always to improve operational reliability. To achieve
                         this it is important to have a clear vision and strategy
@@ -229,8 +231,10 @@
                         required planning over time, ensuring cost effective
                         planned, preventative and reactive maintenance.
                     </p>
-                    <h2 class="text-[40px] text-white pt-10">Data Analysis</h2>
-                    <p class="text-white text-2xl pt-5">
+                    <h2 class="text-3xl lg:text-[40px] text-white pt-10">
+                        Data Analysis
+                    </h2>
+                    <p class="text-white text-lg lg:text-2xl pt-5">
                         We are experts at analysing data and presenting it back
                         in an informative manner that you can make an informed
                         decision on. We understand both the people and data
@@ -245,10 +249,10 @@
         <section class="pt-5 lg:pt-0 relative">
             <div class="container">
                 <div class="w-full lg:w-10/12">
-                    <h2 class="text-[40px] text-white pt-10">
+                    <h2 class="text-3xl lg:text-[40px] text-white pt-10">
                         Our Capabilities
                     </h2>
-                    <p class="text-white text-2xl pt-5">
+                    <p class="text-white text-lg lg:text-2xl pt-5">
                         The principle goals of a maintenance organisation is
                         always to improve operational reliability. In order to
                         achieve this, a maintenance organisation must have a
@@ -690,8 +694,8 @@
                     i.Consult
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
-                <div class="panel mt-4 mb-2">
-                    <p>
+                <div class="panel my-4">
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
@@ -705,8 +709,8 @@
                     i.Manage
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
-                <div class="panel mt-4 mb-2">
-                    <p>
+                <div class="panel my-4">
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
@@ -720,8 +724,8 @@
                     i.Supply
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
-                <div class="panel mt-4 mb-2">
-                    <p>
+                <div class="panel my-4">
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
@@ -735,8 +739,8 @@
                     i.Install
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
-                <div class="panel mt-4 mb-2">
-                    <p>
+                <div class="panel my-4">
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
@@ -751,7 +755,7 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
-                    <p>
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
@@ -766,7 +770,7 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
-                    <p>
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
@@ -781,7 +785,7 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
-                    <p>
+                    <p class="text-lg">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
                         manage and maintain a Brands assets. First impressions
