bye bye capabilities

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
         </section>
 
-        <section class="pt-5 lg:pt-0 relative">
+        <!-- <section class="pt-5 lg:pt-0 relative">
             <div class="container">
                 <div class="w-full lg:w-10/12">
                     <h2 class="text-3xl lg:text-[40px] text-white pt-10">
@@ -270,7 +270,7 @@
                 alt=""
                 class="absolute -z-10 right-0 top-0 w-1/4"
             />
-        </section>
+        </section> -->
 
         <section class="py-10 lg:py-20 hidden lg:block">
             <div class="container">
