--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             />
         </section>
 
-        <section class="pt-5 lg:pt-0 relative">
+        <section class="py-5 lg:py-10 relative">
             <div class="container">
                 <div class="w-full lg:w-10/12">
                     <h2 class="text-3xl lg:text-[40px] text-white">
@@ -238,9 +238,15 @@
                         We are experts at analysing data and presenting it back
                         in an informative manner that you can make an informed
                         decision on. We understand both the people and data
-                        driven decision-making requirements. Agility We’re from
-                        an operational background so we’re not afraid to
-                        challenge your thinking or act as a fresh pair of eyes.
+                        driven decision-making requirements.
+                    </p>
+                    <h2 class="text-3xl lg:text-[40px] text-white pt-10">
+                        Agility
+                    </h2>
+                    <p class="text-white text-lg lg:text-2xl pt-5">
+                        We’re from an operational background so we’re not afraid
+                        to challenge your thinking or act as a fresh pair of
+                        eyes.
                     </p>
                 </div>
             </div>
@@ -273,7 +279,17 @@
         </section> -->
 
         <section class="py-10 lg:py-20 hidden lg:block">
-            <div class="container">
+            <div class="container relative">
+                <div
+                    class="absolute top-0 right-0 placeholder-image w-9/12 rounded-lg"
+                >
+                    <img
+                        src="./assets/images/image001 2.PNG"
+                        alt="feature image"
+                        class="object-cover object-center w-full h-full rounded-lg max-h-[465px]"
+                    />
+                </div>
+
                 <div class="flex flex-wrap justify-between">
                     <!-- consult button-->
                     <div
@@ -345,7 +361,7 @@
 
                     <!-- manage modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg manage-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg manage-modal -mt-12"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
@@ -403,7 +419,7 @@
 
                     <!-- supply modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg supply-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg supply-modal -mt-[7.5rem]"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
@@ -461,7 +477,7 @@
 
                     <!-- install modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg install-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg install-modal -mt-48"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
@@ -521,7 +537,7 @@
 
                     <!-- maintain modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg maintain-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg maintain-modal -mt-[16.5rem]"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
@@ -579,7 +595,7 @@
 
                     <!-- survey modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg survey-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg survey-modal -mt-[20.5rem]"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
@@ -637,7 +653,7 @@
 
                     <!-- audit modal -->
                     <div
-                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg audit-modal"
+                        class="panel lg:w-9/12 border-2 border-i4-pink rounded-lg audit-modal -mt-[25rem]"
                     >
                         <div class="p-10 flex flex-wrap">
                             <div class="w-full lg:w-1/3">
@@ -683,6 +699,16 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="block lg:hidden">
+            <div class="container rounded-lg py-5">
+                <img
+                    src="./assets/images/image001 2.PNG"
+                    alt="feature image"
+                    class="object-cover object-center w-full h-full rounded-lg"
+                />
             </div>
         </section>
 
