change words functionality

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                     class="text-white text-[2.5rem] leading-tight lg:text-[7.5rem] lg:leading-[8.75rem] tracking-wide lg:tracking-normal text-center font-medium pt-10 lg:pt-20 pb-6 lg:pb-10 text-outline"
                 >
                     Your
-                    <span class="outlined-text-pink text-black">Brand</span>
+                    <span class="outlined-text-pink text-black" id="changeText"
+                        >Brand</span
+                    >
                     Story.<br />
                     We
                     <span class="outlined-text-white text-black">Take</span>
@@ -924,5 +926,6 @@
         <script type="text/javascript" src="./src/js/WorkSlider.js"></script>
         <script type="text/javascript" src="./src/js/Accordion.js"></script>
         <script type="text/javascript" src="./src/js/Modal.js"></script>
+        <script type="text/javascript" src="./src/js/ChangeText.js"></script>
     </body>
 </html>
