--- a/index.html
+++ b/index.html
@@ -723,11 +723,15 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel my-4">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Offering expert professional consultation, advice
+                            and guidance within particular fields.</span
+                        >
+                        Brand consultancy * Project consultancy * Installation
+                        consultancy * Maintenance consultancy * Procurement
+                        consultancy * Health & Safety Consultancy * Electrical
+                        consultancy
                     </p>
                 </div>
 
@@ -738,11 +742,18 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel my-4">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Management of projects, assets & equipment, people,
+                            strategy, process and structure of an
+                            organisation.</span
+                        >
+                        Project management * Planning and Scheduling * Asset &
+                        Equipment management * Procurement management * Contract
+                        management * Manufacture management * Supply & Supplier
+                        management * Maintenance management * Installation
+                        management * Re branding and De branding management *
+                        Electrical & Signage management
                     </p>
                 </div>
 
@@ -753,11 +764,18 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel my-4">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Management of projects, assets & equipment, people,
+                            strategy, process and structure of an
+                            organisation.</span
+                        >
+                        Project management * Planning and Scheduling * Asset &
+                        Equipment management * Procurement management * Contract
+                        management * Manufacture management * Supply & Supplier
+                        management * Maintenance management * Installation
+                        management * Re branding and De branding management *
+                        Electrical & Signage management
                     </p>
                 </div>
 
@@ -768,11 +786,17 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel my-4">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Experts at installing Fabric & Electrical equipment
+                            and Illuminated & non Illuminated signage. Re
+                            branding and Electrical upgrades, always aiming to
+                            make assets more efficient.</span
+                        >Shop fitting * Electrics * Lighting * Electrics for
+                        signage * Digital signage * Illuminated Signage * LED *
+                        Original glass neon * LED faux neon * Soft signage *
+                        Architectural signage * Way finding and Directional
+                        signage
                     </p>
                 </div>
 
@@ -783,11 +807,15 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Always looking to improve operational reliability.
+                            To achieve this we have a clear vision and strategy
+                            with established procedures and goals. </span
+                        >External & Internal signage * Graphics maintenance *
+                        Planned preventative maintenance * Reactive corrective
+                        maintenance * Electrical, Lighting & Digital maintenance
+                        * Neon & LED maintenance
                     </p>
                 </div>
 
@@ -798,11 +826,17 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Surveys carried out to gather data establishing
+                            required work and equipment. Developing plans and
+                            visual depictions for projects to run smoothly and
+                            ensure a site is working to it’s full
+                            capacity.</span
+                        >
+                        Full site surveys * Vehicle fleet * Installation *
+                        Maintenance * Supplier register * Re branding and De
+                        branding site surveys
                     </p>
                 </div>
 
@@ -813,11 +847,24 @@
                     <i class="fa-solid fa-plus text-i4-pink"></i>
                 </button>
                 <div class="panel mt-4 mb-2">
-                    <p class="text-lg">
-                        i4Brands work with clients to provide a service to
-                        ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Brands assets. First impressions
-                        are a key factor when attracting new customers.
+                    <p class="text-lg pb-2">
+                        <span class="font-bold block pb-4"
+                            >Every organisation, operation and maintenance team
+                            striving to improve their asset value to the
+                            business must understand how they are performing
+                            against their objectives and targets. An audit
+                            identifies deviations from planned requirements and
+                            highlights any areas of improvement required to
+                            maximise an assets life span.
+                        </span>
+                        Assets Registers * Energy efficiency inspection reports
+                        * Electrical test records ( EICR ) * Process and
+                        Procedures * Installation records * Operation and
+                        Maintenance manuals/records * Planned Preventive
+                        Maintenance inspection and test records * Site audit *
+                        Vehicle inspection * Branding efficiency report *
+                        Procurement & stock * Health & Safety checks * Reporting
+                        * Suppliers list
                     </p>
                 </div>
             </div>
