--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <p class="text-lg text-white pt-5 lg:pt-10">
                         i4Brands work with clients to provide a service to
                         ensure they stand out from their competitor. i4Brands
-                        manage and maintain a Braxnds assets. First impressions
+                        manage and maintain a Brands assets. First impressions
                         are a key factor when attracting new customers. We offer
                         a full rebrand service, or a brand re fresh but we also
                         take in to account cost factors always advising in the
