--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
 
         <section class="py-10 lg:py-20 w-full lg:w-2/3 mx-auto">
             <div class="container">
-                <p class="text-center text-white text-4xl">
+                <p class="text-center text-white text-xl lg:text-4xl">
                     <span class="text-i4-pink font-bold">Creativity</span> is
                     the ability to see, think or make something that did not
                     exist previously
