--- a/index.html
+++ b/index.html
@@ -197,16 +197,13 @@
                 <div class="w-full lg:w-5/12"></div>
 
                 <div class="w-full lg:w-6/12 flex flex-wrap gap-5">
-                    <button
-                        href="mailto:hello@i4brands.co.uk"
-                        class="btn-outline"
-                    >
+                    <a href="mailto:hello@i4brands.co.uk" class="btn-outline">
                         Email us now
-                    </button>
+                    </a>
 
-                    <button href="tel:07506731023" class="btn-outline">
+                    <a href="tel:07506731023" class="btn-outline">
                         Telephone
-                    </button>
+                    </a>
                 </div>
             </div>
             <img
