--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         guarantee to keep them working to their full potential
                         through preventative and where required reactive
                         maintenance with a 100% success rate for repairs and a
-                        guaranteed first time fix. Where possible we are the go
+                        guaranteed first time fix where possible. We are the go
                         to company. We strive on a challenge, with a get the job
                         done mentality.
                     </p>
