--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                         target="_blank"
                         >Instagram</a
                     >
-                    <a href="https://www.facebook.com" target="_blank"
+                    <a href="https://www.facebook.com/i4brands" target="_blank"
                         >Facebook</a
                     >
                 </div>
