--- a/contact.html
+++ b/contact.html
@@ -87,5 +87,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="container">
+            <div class="text-white flex gap-5 lg:justify-end pt-5 lg:pt-0">
+                <a
+                    href="https://www.linkedin.com/company/i4brands"
+                    target="_blank"
+                    >LinkedIn</a
+                >
+                <a
+                    href="https://www.instagram.com/i4brands_brandsolutions"
+                    target="_blank"
+                    >Instagram</a
+                >
+                <a href="https://www.facebook.com/i4brands" target="_blank"
+                    >Facebook</a
+                >
+            </div>
+        </section>
     </body>
 </html>
