contact page added

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,12 @@
             alt="footer background"
             class="absolute bottom-0 right-0 hidden md:block -z-10"
         />
+
+        <img
+            src="./assets/images/i4brands - mobile.png"
+            alt="footer background"
+            class="absolute bottom-0 right-0 block md:hidden -z-10"
+        />
         <header class="container py-5 lg:py-10">
             <div class="flex justify-between">
                 <a href="./">
@@ -40,7 +46,7 @@
                     class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
                 >
                     We'd love to talk about how we can help you with your
-                    project. Get in touch.
+                    project. <span class="text-i4-pink">Get in touch.</span>
                 </h2>
             </div>
         </section>
