contact page added

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,12 @@
                     >
                         Kyte Yorkshire Business Centre, Great North Road,
                         Pontefract, WF8 3HR
+                        <a
+                            href="https://goo.gl/maps/aXaCVz9NVMEmXf939"
+                            target="_blank"
+                            class="text-i4-pink block cursor-pointer"
+                            >Visit us</a
+                        >
                     </p>
                 </div>
 
