--- a/about.html
+++ b/about.html
@@ -33,34 +33,43 @@
             </div>
         </header>
 
-        <section class="py-10 lg:py-20">
+        <section class="py-10 lg:py-20 relative">
             <div class="container">
                 <h2
                     class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
                 >
-                    Whether it's advice, equipment, installation, or upkeep,
-                    we're all about cracking those challenges wide open. We're
-                    the solution seekers, not the problem creators. When things
-                    break, we're on it - consider it fixed. We're big fans of
-                    fixing rather than ditching, which trims expenses and amps
-                    up efficiency. And if new stuff is on your mind, we've got
-                    you covered - we'll hook you up with exactly what you need.
+                    We are your preffered service partner, here to help you
+                    exactly when needed. Whether it's advice, equipment,
+                    installation, or upkeep, we're all about cracking those
+                    challenges wide open. When things break, we're on it -
+                    consider it fixed. We're big fans of fixing rather than
+                    ditching, which trims expenses and amps up efficiency. And
+                    if new stuff is on your mind, we've got you covered - we'll
+                    hook you up with exactly what you need.
                 </h2>
             </div>
+
+            <img
+                src="./assets/images/right-hand-smaller.svg"
+                alt=""
+                class="absolute -z-10 right-0 bottom-0 w-full lg:w-2/5"
+            />
         </section>
 
         <section class="py-10 lg:py-20">
             <div class="text-white container">
-                <div class="accordion flex justify-between items-center pb-6">
+                <div class="accordion flex justify-between items-center">
                     <button
                         class="text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         Asset management and maintenance
                     </button>
-                    <i class="fa-solid fa-plus text-3xl pb-2 icon"></i>
+                    <i
+                        class="fa-solid fa-plus text-3xl pb-2 icon text-i4-pink"
+                    ></i>
                 </div>
                 <div class="panel max-h-0 overflow-hidden">
-                    <p class="text-2xl pb-10 pr-4 leading-snug">
+                    <p class="text-2xl pr-4 leading-normal mt-2">
                         We can reduce equipment downtime and lessen repair
                         requirements, in turn increasing life expectancy of the
                         equipment and machinery assets. We can also reduce
@@ -70,16 +79,18 @@
                     </p>
                 </div>
 
-                <div class="flex justify-between items-center pb-6 accordion">
+                <div class="flex justify-between items-center accordion mt-4">
                     <button
                         class="text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         First impressions
                     </button>
-                    <i class="fa-solid fa-plus text-3xl pb-2 icon"></i>
+                    <i
+                        class="fa-solid fa-plus text-3xl pb-2 icon text-i4-pink"
+                    ></i>
                 </div>
                 <div class="panel max-h-0 overflow-hidden">
-                    <p class="text-2xl pb-10 pr-4 leading-snug">
+                    <p class="text-2xl pr-4 leading-normal mt-2">
                         Giving off a great first impression will help you
                         establish and build your credibility, especially if you
                         are new to a specific market or niche in business. If
@@ -92,46 +103,49 @@
                     </p>
                 </div>
 
-                <div class="flex justify-between items-center pb-6 accordion">
+                <div class="flex justify-between items-center accordion mt-4">
                     <button
                         class="text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         Energy saving lighting solutions
                     </button>
-                    <i class="fa-solid fa-plus text-3xl pb-2 icon"></i>
+                    <i
+                        class="fa-solid fa-plus text-3xl pb-2 icon text-i4-pink"
+                    ></i>
                 </div>
                 <div class="panel max-h-0 overflow-hidden">
-                    <p class="text-2xl pb-10 pr-4 leading-snug">
+                    <p class="text-2xl pr-4 leading-normal mt-2">
                         Power your Workplace and Home more efficiently (and
                         cheaply) with energy bills rising now is the time to
                         start thinking about energy saving lighting. We upgrade
                         lighting systems from fluorescent, Halogen, and other
                         inefficient incandescent lighting to more energy
-                        efficient alternatives such as LED i4Brands can
+                        efficient alternatives such as LED. i4Brands can
                         implement a lighting scheme that reduces costs for you,
                         lasts longer minimises downtime and is eco-friendly.
                     </p>
                 </div>
 
-                <div class="flex justify-between items-center accordion">
+                <div class="flex justify-between items-center accordion mt-4">
                     <button
                         class="text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         Visual branding and merchandising
                     </button>
-                    <i class="fa-solid fa-plus text-3xl pb-2 icon"></i>
+                    <i
+                        class="fa-solid fa-plus text-3xl pb-2 icon text-i4-pink"
+                    ></i>
                 </div>
                 <div class="panel max-h-0 overflow-hidden">
-                    <p class="text-2xl pt-6 pb-10 pr-4 leading-snug">
-                        Giving off a great first impression will help you
-                        establish and build your credibility, especially if you
-                        are new to a specific market or niche in business. If
-                        you do not yet have an established professional
-                        reputation, you can begin building one by making a
-                        positive and lasting first impression. Likewise if you
-                        are an established brand with a reputation to maintain
-                        you need to ensure customers first impressions are
-                        always at the forefront of the brands thinking.
+                    <p class="text-2xl pr-4 leading-normal mt-2">
+                        Creating and promoting a strong brand is one of the most
+                        important elements of your retail business. It conveys
+                        messages to potential customers about your business'
+                        reputation and personality and can help you stand out
+                        amongst your competitors. You can use signage throughout
+                        your business premises to communicate key messages to
+                        your customers. We can provide a vast amount of ways in
+                        order to get your message across efficiently.
                     </p>
                 </div>
             </div>
