about page created

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <section class="py-10 lg:py-20 relative">
             <div class="container">
                 <h2
-                    class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
+                    class="hidden lg:block text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
                 >
                     We are your preffered service partner, here to help you
                     exactly when needed. Whether it's advice, equipment,
@@ -47,6 +47,30 @@
                     if new stuff is on your mind, we've got you covered - we'll
                     hook you up with exactly what you need.
                 </h2>
+                <h2
+                    class="block lg:hidden text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
+                >
+                    We are your preffered service partner, here to help you
+                    exactly when needed. Whether it's advice, equipment,
+                    installation, or upkeep, we're all about cracking those
+                    challenges wide open.
+                </h2>
+                <div class="block lg:hidden py-10">
+                    <img
+                        src="./assets/images/about-us-team.jpeg"
+                        alt="Team image"
+                        class="object-cover object-center rounded-lg"
+                    />
+                </div>
+                <h2
+                    class="block lg:hidden text-2xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
+                >
+                    When things break, we're on it - consider it fixed. We're
+                    big fans of fixing rather than ditching, which trims
+                    expenses and amps up efficiency. And if new stuff is on your
+                    mind, we've got you covered - we'll hook you up with exactly
+                    what you need.
+                </h2>
             </div>
 
             <img
@@ -56,11 +80,11 @@
             />
         </section>
 
-        <section class="py-10 lg:py-20">
+        <section class="pt-0 pb-10 lg:py-20">
             <div class="text-white container">
                 <div class="accordion flex justify-between items-center">
                     <button
-                        class="text-3xl text-left lg:text-[40px] w-full pr-4"
+                        class="text-2xl lg:text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         Asset management and maintenance
                     </button>
@@ -81,7 +105,7 @@
 
                 <div class="flex justify-between items-center accordion mt-4">
                     <button
-                        class="text-3xl text-left lg:text-[40px] w-full pr-4"
+                        class="text-2xl lg:text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         First impressions
                     </button>
@@ -105,7 +129,7 @@
 
                 <div class="flex justify-between items-center accordion mt-4">
                     <button
-                        class="text-3xl text-left lg:text-[40px] w-full pr-4"
+                        class="text-2xl lg:text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         Energy saving lighting solutions
                     </button>
@@ -128,7 +152,7 @@
 
                 <div class="flex justify-between items-center accordion mt-4">
                     <button
-                        class="text-3xl text-left lg:text-[40px] w-full pr-4"
+                        class="text-2xl lg:text-3xl text-left lg:text-[40px] w-full pr-4"
                     >
                         Visual branding and merchandising
                     </button>
