--- a/about.html
+++ b/about.html
@@ -80,6 +80,16 @@
             />
         </section>
 
+        <section class="hidden lg:block pb-10">
+            <div class="flex justify-center">
+                <img
+                    src="./assets/images/about-us-team.jpeg"
+                    alt="Team image"
+                    class="object-cover object-center rounded-lg"
+                />
+            </div>
+        </section>
+
         <section class="pt-0 pb-10 lg:py-20">
             <div class="text-white container">
                 <div class="accordion flex justify-between items-center">
