--- a/electrical.html
+++ b/electrical.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Services</title>
+        <title>Electrical</title>
         <link href="./dist/output.css" rel="stylesheet" />
         <script
             src="https://kit.fontawesome.com/b838f5a310.js"
             crossorigin="anonymous"
         ></script>
     </head>
-    <body class="bg-black font-primary overflow-x-hidden">
+    <body class="bg-black font-primary">
         <header class="container py-5 lg:py-10 relative">
             <div class="flex justify-between items-center lg:items-start">
                 <a href="./">
@@ -95,100 +95,8 @@
                 <h2
                     class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
                 >
-                    We provide an all-encompassing services solution that spans
-                    the entire building and property management spectrum. Our
-                    services include meticulous management of both interior and
-                    exterior facilities, ensuring a comprehensive and seamless
-                    experience for our clients.
+                    This is the electrical page
                 </h2>
-            </div>
-        </section>
-
-        <section class="py-10 lg:py-20">
-            <div class="container">
-                <div class="grid gird-cols-1 md:grid-cols-2 gap-8">
-                    <div
-                        class="rounded-lg relative hover-container touch-element"
-                    >
-                        <img
-                            src="./assets/images/services - exterior.jpeg"
-                            alt="Exterior of building"
-                            class="object-cover object-center rounded-lg min-h-[240px] lg:min-h-[400px]"
-                        />
-
-                        <div
-                            class="no-1 hover-title opacity-0 absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black px-8"
-                        >
-                            <h2
-                                class="text-white text-3xl tracking-wide text-center"
-                            >
-                                Exterior Building Services
-                            </h2>
-                        </div>
-                    </div>
-
-                    <div
-                        class="rounded-lg relative hover-container touch-element"
-                    >
-                        <img
-                            src="./assets/images/services -lighting.webp"
-                            alt="Lighting services"
-                            class="object-cover object-center rounded-lg min-h-[240px] lg:min-h-[400px]"
-                        />
-
-                        <div
-                            class="no-2 hover-title opacity-0 absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black px-8"
-                        >
-                            <a href="./electrical.html">
-                                <h2
-                                    class="text-white text-3xl tracking-wide text-center"
-                                >
-                                    Electrical and Lighting
-                                </h2>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div
-                        class="rounded-lg relative hover-container touch-element"
-                    >
-                        <img
-                            src="./assets/images/services - lights.webp"
-                            alt="Exterior of building"
-                            class="object-cover object-center rounded-lg min-h-[240px] lg:min-h-[400px]"
-                        />
-
-                        <div
-                            class="no-3 hover-title opacity-0 absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black px-8"
-                        >
-                            <h2
-                                class="text-white text-3xl tracking-wide text-center"
-                            >
-                                Interior Services
-                            </h2>
-                        </div>
-                    </div>
-
-                    <div
-                        class="rounded-lg relative hover-container touch-element"
-                    >
-                        <img
-                            src="./assets/images/services - office.webp"
-                            alt="Exterior of building"
-                            class="object-cover object-center rounded-lg min-h-[240px] lg:min-h-[400px]"
-                        />
-
-                        <div
-                            class="no-4 hover-title opacity-0 absolute top-0 left-0 w-full h-full flex justify-center items-center bg-black px-8"
-                        >
-                            <h2
-                                class="text-white text-3xl tracking-wide text-center"
-                            >
-                                Project Planning
-                            </h2>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
